--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -2,7 +2,7 @@
     <div class="row w-15">
       <div class="col-lg-2">
 <div class="heading">
-<h5 style="background-color:#cccccc">注文情報確認</h2>
+<h4>注文情報確認</h>
 </div>
 </div>
 </div>
