--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,9 +1,15 @@
 <div class="container">
-    <div class="row">
-         <div class="col-lg-12 ">
-<h3>注文履歴一覧</h3>
+    <div class="row w-15">
+      <div class="col-lg-2">
+<div class="heading">
+<h4>注文履歴一覧</h4>
+</div>
+</div>
+</div>
 
-<table class="order_list" border="1" style="border-collapse: collapse" >
+    <div class="row">
+         <!--<div class="col-lg-12 ">-->
+<table class="order_list col-lg-12" border="1" style="border-collapse: collapse" >
   <thead>
     <tr>
       <th class="th_color">注文日</th>
@@ -38,6 +44,6 @@
   <%= paginate @orders %>
   </tbody>
 </table>
-</div>
+<!--</div>-->
 </div>
 </div>
