--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -2,7 +2,7 @@
     <div class="row w-15">
       <div class="col-lg-2">
 <div class="heading">
-<h5 style="background-color:#cccccc">注文履歴詳細</h3>
+<h4>注文履歴詳細</h4>
 </div>
 </div>
 </div>
