--- a/app/assets/stylesheets/orders.scss
+++ b/app/assets/stylesheets/orders.scss
@@ -2,11 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.order_list th,
-.order_list td {
-  padding: 0px 5px;
 
-}
 .order_list_item_names{
   width:20%;
 }
@@ -39,6 +35,7 @@
 }
 .order_contents{
   margin-bottom:10%;
+  text-align:center;
 }
 .confirm_payment_text{
   margin-bottom:3%;
@@ -53,17 +50,20 @@
   text-align:center;
   margin-bottom:5%;
 }
-.billing_info_td{
-  background-color:silver;
-}
-.order_info_th{
-  background-color:silver;
-}
+
+
 .th_color{
   background-color:silver;
+  text-align:center;
 }
 .thankyou{
   text-align:center;
   margin-top:20%;
   margin-bottom:30%;
+}
+.billing_info{
+  text-align:center;
+}
+.order_list{
+  margin-bottom:10%;
 }
