--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -2,13 +2,13 @@
   <div class="row w-15">
       <div class="col-lg-2">
 <div class="heading">
-<h5 style="background-color:#cccccc">注文履歴一覧</h5>
+<h4>注文履歴一覧</h4>
 </div>
 </div>
 </div>
 
 
-<table class="table">
+<table class="table　">
   <thead class="thead-light">
     <tr>
       <th>購入日時</th>
