--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row">
+  <div class="row my-3">
     <div class="offset-1 col-6 i-show-empty">
       <h4 class="my-3">ジャンル一覧・追加</h4>
       <div class="my-2">
