--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
-  <div class="row i-index-row">
-    <div class="col-lg-2 my-3">
+  <div class="row my-3">
+    <div class="col-lg-2">
       <table class="table table-borderd">
         <thead>
           <tr>
@@ -19,7 +19,7 @@
       </table>
     </div>
     <div class="col-lg-10 i-index-empty">
-      <h1>商品一覧</h1>
+      <h4>商品一覧</h4>
       <div class="yoko">
         <% @items.each do |item| %>
           <div class="tate">
