--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
-  <div class="row">
+  <div class="row my-3">
     <div class="col-12 i-show-empty">
-      <h5 class="my-3">ジャンル編集</h5>
+      <h4 class="my-3">ジャンル編集</h4>
     <%= form_with model: @genre, url: admin_genre_path(@genre), local:true do |f| %>
       ジャンル名  <%= f.text_field :name %>
       <%= f.submit '変更を保存', class: "btn btn-success" %>
