--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,38 +1,40 @@
 <div class="container">
   <div class="row my-3">
-    <h3 class="pr-3 pt-3">商品編集</h3>
-    <%= form_with model:@item, url: admin_items_path, local:true do |f| %>
-    <table class="customer_table">
-        <tr>
-          <th class="customer_edit_th">商品画像</th>
-          <td><%= f.attachment_field :image %></td>
-        </tr>
-        <tr>
-          <th class="customer_edit_th">商品名</th>
-          <td><%= f.text_field :name %></td>
-        </tr>
-         <tr>
-          <th class="customer_edit_th">商品説明</th>
-          <td><%= f.text_area :introduct %></td>
-        </tr>
-          <th class="customer_edit_th">ジャンル</th>
-          <td><%= collection_select(:genre, :name, @genres, :id, :name) %></td>
-        </tr>
-          <th class="customer_edit_th">税抜価格</th>
-          <td><%= f.text_field :excluded_price %>円</td>
-        </tr>
-        <tr>
-          <th class="customer_edit_th">販売ステータス</th>
-          <td>
-            <%= f.radio_button :is_active, true %>
-            <%= f.label :is_active, '販売中', value: true %>
-            <%= f.radio_button :is_active, false %>
-            <%= f.label :is_active, '売り切れ', value: false %>
-          </td>
-        </tr>
-      </table>
-      <div></div>
-      <%= f.submit "変更を保存", class: "btn btn-success" %>
-    <% end %>
+    <div class="col-lg-12 i-show-empty">
+      <h4 class="pr-3 pt-3">商品編集</h4>
+      <%= form_with model:@item, url: admin_items_path, local:true do |f| %>
+      <table class="customer_table">
+          <tr>
+            <th class="customer_edit_th">商品画像</th>
+            <td><%= f.attachment_field :image %></td>
+          </tr>
+          <tr>
+            <th class="customer_edit_th">商品名</th>
+            <td><%= f.text_field :name %></td>
+          </tr>
+           <tr>
+            <th class="customer_edit_th">商品説明</th>
+            <td><%= f.text_area :introduct %></td>
+          </tr>
+            <th class="customer_edit_th">ジャンル</th>
+            <td><%= collection_select(:genre, :name, @genres, :id, :name) %></td>
+          </tr>
+            <th class="customer_edit_th">税抜価格</th>
+            <td><%= f.text_field :excluded_price %>円</td>
+          </tr>
+          <tr>
+            <th class="customer_edit_th">販売ステータス</th>
+            <td>
+              <%= f.radio_button :is_active, true %>
+              <%= f.label :is_active, '販売中', value: true %>
+              <%= f.radio_button :is_active, false %>
+              <%= f.label :is_active, '売り切れ', value: false %>
+            </td>
+          </tr>
+        </table>
+        <div></div>
+        <%= f.submit "変更を保存", class: "btn btn-success" %>
+      <% end %>
+    </div>
   </div>
 </div>
