--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,13 +1,17 @@
-<h1 class="text-center text-danger">About</h1>
-<p class="text-center">
-  ながのケーキは全国発送可能なケーキ屋さんです。<br>
-お子様からお年寄りの方までお召し上がりいただけるよう、<br>
-様々なバリエーションをご用意しております。<br>
-また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけます。<br>
-ぜひご注文ください。<br>
-</p>
-<div class="text-center">
-  <img class="d-block mx-auto" src="https://thumb.photo-ac.com/ec/ec8584da1b78f6431c3293c320fbc410_w.jpeg">
+<div class="container">
+  <div class="row my-3">
+    <div class="col-lg-12">
+      <h4 class="text-center text-danger">About</h4>
+      <p class="text-center">
+        ながのケーキは全国発送可能なケーキ屋さんです。<br>
+      お子様からお年寄りの方までお召し上がりいただけるよう、<br>
+      様々なバリエーションをご用意しております。<br>
+      また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけます。<br>
+      ぜひご注文ください。<br>
+      </p>
+      <div class="text-center">
+        <img class="d-block mx-auto" src="https://thumb.photo-ac.com/ec/ec8584da1b78f6431c3293c320fbc410_w.jpeg">
+      </div>
+    </div>
+  </div>
 </div>
-<br>
-
