--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
-  <div class="row">
-    <div class="col-lg-3 my-3">
+  <div class="row my-3">
+    <div class="col-lg-3">
       <table class="table table-borderd">
         <thead>
           <tr>
@@ -19,7 +19,7 @@
       </table>
     </div>
     <div class="col-lg-9">
-      <div class="card mt-10px my-3">
+      <div class="card mt-10px">
         <div class="card-img hgiht">
           <%= image_tag 'top_image_2.jpeg',:size =>'830x400' %>
         </div>
@@ -33,7 +33,7 @@
         </div>
       </div>
 
-      <h1>新着商品</h1>
+      <h4 class="mt-2">新着商品</h4>
         <div class="top-yoko">
           <% @items.each do |item| %>
             <div class="tate">
