--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
-  <div class="row">
-    <div class="col-lg-2 my-5">
+  <div class="row my-3">
+    <div class="col-lg-2 mt-5">
       <table class="table table-borderd">
         <thead>
           <tr>
