--- a/app/assets/stylesheets/public/customers.scss
+++ b/app/assets/stylesheets/public/customers.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .customer_show_th{
-  background-color: silver;
+  background-color: #dee2e6;
   width: 150px;
   height: 50px;
   text-align: center;
@@ -38,7 +38,7 @@
 
 .admin_customer_index_th_1{
   background-color: silver;
-  width: 100px;
+  width: 120px;
   height: 50px;
 }
 
