--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,7 +57,9 @@
 
   <body>
     <%= yield %>
-    <footer class="footer navbar navbar-expand-lg navbar-dark bg-white border">
+  </body>
+
+     <footer class="footer navbar navbar-expand-lg navbar-dark bg-white border" id= "fotter" >
       <div class="a">
         <div class="text-danger font-weight-bold h4">
           <%= link_to root_path do %>
@@ -70,6 +72,5 @@
         </span>
       </div>
     </footer>
-  </body>
 
 </html>
