--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,10 +1,9 @@
 
 
 <div class="container">
-  <div class="row">
+  <div class="row my-3">
     <div class="col-lg-11 offset-lg-1 ">
-      <br>
-      <h3>マイページ</h3>
+      <h4>マイページ</h4>
       <span class="title">登録情報<span>
       <span class="customer_edit"><%= link_to "編集する", edit_customer_path,class: "btn btn-sm btn-success" %></span>
       <table border="1" style="border-collapse: collapse" class="customer_show_table">
