--- a/app/assets/stylesheets/addresses.scss
+++ b/app/assets/stylesheets/addresses.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .address_index_list_th_1{
-  background-color: silver;
+  background-color: #dee2e6;
   width: 150px;
   height: 50px;
   text-align: center;
@@ -11,7 +11,7 @@
 }
 
 .address_index_list_th_2{
-  background-color: silver;
+  background-color: #dee2e6;
   width: 300px;
   height: 50px;
   text-align: center;
@@ -19,13 +19,18 @@
 }
 
 .address_index_list_th_3{
-  background-color: silver;
+  background-color: #dee2e6;
   width: 200px;
   height: 50px;
   text-align: center;
   font-size: 15px;
 }
 
+.address_index_list_td{
+  height: 50px;
+}
+
 .address_index_list_td_edit_and_destroy{
   text-align: center;
+  height: 50px;
 }
