--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,8 +1,7 @@
 <div class="container">
-  <div class="row">
+  <div class="row my-3">
     <div class="ccol-lg-11 offset-lg-1">
-      <br>
-      <h3><%= @customer.last_name + @customer.first_name %>さんの会員情報編集</h3>
+      <h4><%= @customer.last_name + @customer.first_name %>さんの会員情報編集</h4>
       <%= form_with model:@customer, url:admin_customer_path, local:true do |f| %>
       <table class="customer_table">
         <tr>
@@ -50,7 +49,6 @@
       </span>
 
       <% end %>
-    <br>
     </div>
   </div>
 </div>
