--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row">
+  <div class="row my-3">
     <div class="ccol-lg-11 offset-lg-1">
       <% if @address.errors.any? %>
         <h3 style="color: red"><%= @address.errors.count %>error prohibited this book from being saved:</h3>
@@ -12,8 +12,7 @@
         </div>
       <% end %>
       <div>
-        <br>
-        <h3>配送先登録/一覧</h3>
+        <h4>配送先登録/一覧</h4>
         <%= form_with model: @address, url: addresses_path, local:true do |f| %>
           <table>
             <tr>
@@ -47,9 +46,9 @@
             <% @addresses.each do |address| %>
             <tbody>
               <tr>
-                <td>〒<%= address.postcode %></td>
-                <td><%= address.address  %></td>
-                <td><%= address.name %></td>
+                <td class="address_index_list_td">〒<%= address.postcode %></td>
+                <td class="address_index_list_td"><%= address.address  %></td>
+                <td class="address_index_list_td"><%= address.name %></td>
                 <td class="address_index_list_td_edit_and_destroy">
                   <span><%= link_to "編集する", edit_address_path(address), class: 'btn btn-sm btn-success' %></span>
                   <span><%= link_to "削除する", address_path(address), class: 'btn btn-sm btn-danger', method: :delete  %></span>
@@ -58,7 +57,6 @@
             </tbody>
             <% end %>
         </table>
-        <br>
       </div>
     </div>
   </div>
