--- a/app/views/public/customers/confirm.html.erb
+++ b/app/views/public/customers/confirm.html.erb
@@ -1,10 +1,9 @@
-<div class="container">
-  <div class="row">
+<div class="container i-show-empty">
+  <div class="row my-3">
     <div class="ccol-lg-11 offset-lg-1">
-      <br>
-      <h1>
+      <h4>
         本当に退会しますか？
-      </h1>
+      </h4>
 
       <p>
         退会すると会員登録情報や<br>
@@ -19,7 +18,6 @@
       <div>
         <%= link_to "退会する", customer_hide_path, method: :patch, data: { confilm: "本当に退会しますか？" }, class: "btn btn-sm btn-danger" %>
       </div>
-      <br>
     </div>
   </div>
 </div>
