--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,33 +1,54 @@
-<h1>ショッピングカート</h1>
-<%= link_to "カートを空にする", cart_item_destroy_all_path, method: :delete %>
-<table>
-  <thead>
-    <tr>
-      <th>商品名</th>
-      <th>単価(税込)</th>
-      <th>数量</th>
-      <th>小計</th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
+<main>
+<div class="container">
+  <div class="row my-3">
+    <h4 class="col-lg-4 offset-md-2">ショッピングカート</h4>
+     <%= link_to "カートを空にする", cart_item_destroy_all_path, method: :delete, class: "btn btn-sm btn-danger col-lg-2 offset-md-2" %>
+  </div>
+  <div class="row my-3">
+    <table class="table col-lg-8 offset-md-2">
+    <thead class="thead-light">
+     <tr>
+      <th class="cart_item_th">商品名</th>
+      <th class="cart_item_th">単価(税込)</th>
+      <th class="cart_item_th">数量</th>
+      <th class="cart_item_th">小計</th>
+      <th class="cart_item_th"></th>
+
+     </tr>
+    </thead>
+    <tbody>
     <% @price = 0 %>
     <% @cart_items.each do |cart_item| %>
       <tr>
-        <td><%= attachment_image_tag cart_item.item, :image, :fill, 100, 60, format: 'jpeg', fallback: "no_image.png" %><%= cart_item.item.name%></td>
-        <td><%= cart_item.item.add_tax_price.to_s(:delimited) %></td>
+        <td class="cart_item_td"><%= attachment_image_tag cart_item.item, :image, :fill, 100, 60, format: 'jpeg', fallback: "no_image.png" %><%= cart_item.item.name%></td>
+        <td class="cart_item_td"><%= cart_item.item.add_tax_price.to_s(:delimited) %></td>
         <%= form_with model:cart_item, local:true do |f| %>
-          <td><%= f.select :item_count, options_for_select((1..10).to_a, cart_item.item_count) %><%= f.submit "変更" %></td>
+          <td class="cart_item_td"><%= f.select :item_count, options_for_select((1..10).to_a, cart_item.item_count) %><%= f.submit "変更", class: "btn btn-sm btn-primary" %></td>
         <% end %>
-        <td><%= cart_item.sub_total_price.to_s(:delimited) %></td>
+        <td class="cart_item_td"><%= cart_item.sub_total_price.to_s(:delimited) %></td>
         <% @price += cart_item.sub_total_price %>
-        <td><%= link_to "削除する", cart_item_path(cart_item), method: :delete %></td>
+        <td class="cart_item_td"><%= link_to "削除する", cart_item_path(cart_item), method: :delete, class: "btn btn-sm btn-danger" %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-<table>
-  <tr><th>合計金額</th><th><%= @price.to_s(:delimited) %></th></tr>
+</div>
+
+<div>
+<%= link_to "買い物を続ける", root_path, class: "action btn btn-sm btn-primary offset-md-2" %>
+</div>
+<div>
+<table class="table col-lg-2 offset-lg-4">
+  <tr>
+    <th class = "thead-light cart_item_th">合計金額</th>
+    <th><%= @price.to_s(:delimited) %></th>
+  </tr>
 </table>
-<%= link_to "買い物を続ける", root_path %>
-<%= link_to "情報入力に進む", new_order_path %>
+</div>
+
+<div class="row my-3">
+<%= link_to "情報入力に進む", new_order_path, class: "btn btn-sm btn-primary col-lg-2 offset-lg-5" %>
+</div>
+</div>
+
+</main>
