--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,11 +28,6 @@ wrepper {
   margin-bottom: -60px;
 }
 
-.footer {
-  width:100%;
-  height: 80px;
-}
-
 .yoko {
   display: flex;
   flex-wrap: wrap;
@@ -98,4 +93,12 @@ wrepper {
   vertical-align: bottom;
 }
 
+body {
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
 
+}
+footer {
+      margin-top: auto;
+}
