--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -94,11 +94,15 @@ wrepper {
 }
 
 body {
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
-
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
+
 footer {
-      margin-top: auto;
+  margin-top: auto;
+}
+
+.img {
+  border-radius: 20px;
 }
