--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -14,6 +14,7 @@
           <tr>
             <th>ジャンル</th>
             <th></th>
+            <th></th>
           </tr>
         </thead>
         <tbody>
@@ -21,6 +22,7 @@
             <tr>
               <td><%= genre.name %></td>
               <td><%= link_to '編集する', edit_admin_genre_path(genre), class: "btn btn-success" %></td>
+              <td><%= link_to '削除する', admin_genre_path(genre), method: :delete, class: "btn btn-danger" %></td>
             </tr>
           <% end %>
         </tbody>
