--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -4,7 +4,7 @@
             <h4>商品詳細</h4>
             <div class="a-i-s">
                 <div class="pt-5">
-                    <%= attachment_image_tag @item, :image, :fill, 250, 150, format: 'jpeg', fallback: "no_image.png" %>
+                    <%= attachment_image_tag @item, :image, :fill, 250, 150, format: 'jpeg', fallback: "no_image.png", class: "img" %>
                 </div>
                 <div class="ml-5 mb-5">
                     <table class="customer_table">
