--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -10,7 +10,7 @@
       ぜひご注文ください。<br>
       </p>
       <div class="text-center">
-        <img class="d-block mx-auto" src="https://thumb.photo-ac.com/ec/ec8584da1b78f6431c3293c320fbc410_w.jpeg">
+        <img class="d-block mx-auto img" src="https://thumb.photo-ac.com/ec/ec8584da1b78f6431c3293c320fbc410_w.jpeg">
       </div>
     </div>
   </div>
