--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -21,7 +21,7 @@
     <div class="col-lg-9">
       <div class="card mt-10px">
         <div class="card-img hgiht">
-          <%= image_tag 'top_image_2.jpeg',:size =>'830x400' %>
+          <%= image_tag 'top_image_2.jpeg',:size =>'830x400', class: "img" %>
         </div>
         <div class="card-img-overlay d-flex">
           <p class="text-dark h4">
@@ -40,7 +40,7 @@
               <p>
 
                 <%= link_to item_path(item) do %>
-                  <%= attachment_image_tag item, :image, :fill, 200, 100, format: 'jpeg', fallback: "no_image.png" %>
+                  <%= attachment_image_tag item, :image, :fill, 200, 100, format: 'jpeg', fallback: "no_image.png", class: "img" %>
                 <% end %>
               </p>
               <p><%= item.name %></p>
