--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -25,7 +25,7 @@
           <div class="tate">
             <p>
               <%= link_to item_path(item) do %>
-                <%= attachment_image_tag item, :image, :fill, 250, 125, format: 'jpeg', fallback: "no_image.png" %>
+                <%= attachment_image_tag item, :image, :fill, 250, 125, format: 'jpeg', fallback: "no_image.png", class: "img" %>
               <% end %>
             </p>
             <p><%= item.name %></p>
