--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -20,7 +20,7 @@
     </div>
     <div class="col-lg-10 yoko i-show-empty">
       <div class="m-5">
-        <%= attachment_image_tag @item, :image, :fill, 350, 200, format: 'jpeg', fallback: "no_image.png" %>
+        <%= attachment_image_tag @item, :image, :fill, 350, 200, format: 'jpeg', fallback: "no_image.png", class: "img" %>
       </div>
       <div class="mt-5">
         <p class="h2">
