--- a/app/views/public/searchs/search.html.erb
+++ b/app/views/public/searchs/search.html.erb
@@ -19,7 +19,7 @@
                         <tr>
                             <th>
                                 <%= link_to item_path(item) do %>
-                                    <%= attachment_image_tag item, :image, :fill, 100, 60, format: 'jpeg', fallback: "no_image.png" %>
+                                    <%= attachment_image_tag item, :image, :fill, 130, 80, format: 'jpeg', fallback: "no_image.png", class: "img" %>
                                 <% end %>
                             </th>
                             <th>
