--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -19,10 +19,8 @@
       </table>
     </div>
     <div class="col-lg-9">
-      <div class="card mt-10px">
-        <div class="card-img hgiht">
-          <%= image_tag 'top_image_2.jpeg',:size =>'830x400', class: "img" %>
-        </div>
+      <div class="card-img-top mt-10px">
+        <%= image_tag 'top_image_2.jpeg',:size =>'830x400', class: "img" %>
         <div class="card-img-overlay d-flex">
           <p class="text-dark h4">
             ようこそ、ながのケーキへ！<br>
