--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,5 +1,11 @@
 <div class="container">
+  <div class="row w-15">
+      <div class="col-lg-2">
+        <div class="heading">
 <h4>注文情報入力</h4>
+</div>
+</div>
+</div>
 <%= form_with model:@order,url: order_confirm_path, method: :post,local: true do |f| %>
   <label>支払方法</label>
   </br>
