--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row my-3">
+  <div class="row my-3">a
     <div class="col-lg-3">
       <table class="table table-borderd">
         <thead>
