--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,7 +68,8 @@
         </div>
         <span class="text-danger">
           長野県長野市〇〇町〇丁目〇番</br>
-          Tel: 026-×××-××××
+          Tel: 026-×××-××××<br>
+          mail: nagano_cake@mail.com
         </span>
       </div>
     </footer>
