--- a/app/assets/stylesheets/cart_items.scss
+++ b/app/assets/stylesheets/cart_items.scss
@@ -24,5 +24,12 @@
   vertical-align: middle;
 }
 
+.action{
+  width: 250px;
+}
 
-
+.total_price{
+  width: 150px;
+  text-align: center;
+  font-size: 20px;
+}
