--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,11 +1,11 @@
 <main>
 <div class="container">
   <div class="row my-3">
-    <h4 class="col-lg-4 offset-md-2">ショッピングカート</h4>
-     <%= link_to "カートを空にする", cart_item_destroy_all_path, method: :delete, class: "btn btn-sm btn-danger col-lg-2 offset-md-2" %>
+    <h4 class="col-lg-3">ショッピングカート</h4>
+     <%= link_to "カートを空にする", cart_item_destroy_all_path, method: :delete, class: "btn btn-sm btn-danger col-lg-2 offset-md-3" %>
   </div>
   <div class="row my-3">
-    <table class="table col-lg-8 offset-md-2">
+    <table class="table col-lg-8  ">
     <thead class="thead-light">
      <tr>
       <th class="cart_item_th">商品名</th>
@@ -32,23 +32,31 @@
     <% end %>
   </tbody>
 </table>
-</div>
 
-<div>
-<%= link_to "買い物を続ける", root_path, class: "action btn btn-sm btn-primary offset-md-2" %>
-</div>
-<div>
-<table class="table col-lg-2 offset-lg-4">
-  <tr>
-    <th class = "thead-light cart_item_th">合計金額</th>
-    <th><%= @price.to_s(:delimited) %></th>
+
+<div class="col-lg-3 offset-lg-1">
+
+
+<table class="table">
+  <thead class="thead-light">
+    <tr>
+    <th class="cart_item_th">小計(<%= @cart_items.count%>種の商品)</th>
   </tr>
+  <tr>
+    <td class="total_price"><strong>￥<%= @price.to_s(:delimited) %></strong></td>
+  </tr>
+  </thead>
+<!--<table class="table col-lg-2 offset-lg-4">-->
+
 </table>
-</div>
+<%= link_to "買い物を続ける", root_path, class: " btn btn-sm btn-primary action" %>
+<p></p>
 
-<div class="row my-3">
-<%= link_to "情報入力に進む", new_order_path, class: "btn btn-sm btn-primary col-lg-2 offset-lg-5" %>
+<!--<div class="row my-3">-->
+<%= link_to "情報入力に進む", new_order_path, class: "btn btn-sm btn-success action" %>
 </div>
 </div>
-
 </main>
+<!--</div>-->
+<!--svv-->
+<!--</main>-->
