--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,62 +1,71 @@
 <main>
 <div class="container">
-  <div class="row my-3">
-    <h4 class="col-lg-3">ショッピングカート</h4>
-     <%= link_to "カートを空にする", cart_item_destroy_all_path, method: :delete, class: "btn btn-sm btn-danger col-lg-2 offset-md-3" %>
-  </div>
-  <div class="row my-3">
-    <table class="table col-lg-8  ">
+  <% if @cart_items.present? %>
+    <div class="row my-3">
+      <h4 class="col-lg-3">ショッピングカート</h4>
+       <%= link_to "カートを空にする", cart_item_destroy_all_path, method: :delete, class: "btn btn-sm btn-danger col-lg-2 offset-md-3" %>
+    </div>
+    <div class="row my-3">
+      <table class="table col-lg-8  ">
+      <thead class="thead-light">
+       <tr>
+        <th class="cart_item_th">商品名</th>
+        <th class="cart_item_th">単価(税込)</th>
+        <th class="cart_item_th">数量</th>
+        <th class="cart_item_th">小計</th>
+        <th class="cart_item_th"></th>
+       </tr>
+      </thead>
+      <tbody>
+      <% @price = 0 %>
+      <% @cart_items.each do |cart_item| %>
+        <tr>
+          <td class="cart_item_td"><%= attachment_image_tag cart_item.item, :image, :fill, 100, 60, format: 'jpeg', fallback: "no_image.png", class: "img" %><%= cart_item.item.name%></td>
+          <td class="cart_item_td"><%= cart_item.item.add_tax_price.to_s(:delimited) %></td>
+          <%= form_with model:cart_item, local:true do |f| %>
+            <td class="cart_item_td"><%= f.select :item_count, options_for_select((1..10).to_a, cart_item.item_count) %><%= f.submit "変更", class: "btn btn-sm btn-primary" %></td>
+          <% end %>
+          <td class="cart_item_td"><%= cart_item.sub_total_price.to_s(:delimited) %></td>
+          <% @price += cart_item.sub_total_price %>
+          <td class="cart_item_td"><%= link_to "削除する", cart_item_path(cart_item), method: :delete, class: "btn btn-sm btn-danger" %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+
+
+  <div class="col-lg-3 offset-lg-1">
+
+
+  <table class="table">
     <thead class="thead-light">
-     <tr>
-      <th class="cart_item_th">商品名</th>
-      <th class="cart_item_th">単価(税込)</th>
-      <th class="cart_item_th">数量</th>
-      <th class="cart_item_th">小計</th>
-      <th class="cart_item_th"></th>
-
-     </tr>
-    </thead>
-    <tbody>
-    <% @price = 0 %>
-    <% @cart_items.each do |cart_item| %>
       <tr>
-        <td class="cart_item_td"><%= attachment_image_tag cart_item.item, :image, :fill, 100, 60, format: 'jpeg', fallback: "no_image.png", class: "img" %><%= cart_item.item.name%></td>
-        <td class="cart_item_td"><%= cart_item.item.add_tax_price.to_s(:delimited) %></td>
-        <%= form_with model:cart_item, local:true do |f| %>
-          <td class="cart_item_td"><%= f.select :item_count, options_for_select((1..10).to_a, cart_item.item_count) %><%= f.submit "変更", class: "btn btn-sm btn-primary" %></td>
-        <% end %>
-        <td class="cart_item_td"><%= cart_item.sub_total_price.to_s(:delimited) %></td>
-        <% @price += cart_item.sub_total_price %>
-        <td class="cart_item_td"><%= link_to "削除する", cart_item_path(cart_item), method: :delete, class: "btn btn-sm btn-danger" %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-
-<div class="col-lg-3 offset-lg-1">
-
-
-<table class="table">
-  <thead class="thead-light">
+      <th class="cart_item_th">小計(<%= @cart_items.count%>種の商品)</th>
+    </tr>
     <tr>
-    <th class="cart_item_th">小計(<%= @cart_items.count%>種の商品)</th>
-  </tr>
-  <tr>
-    <td class="total_price"><strong>￥<%= @price.to_s(:delimited) %></strong></td>
-  </tr>
-  </thead>
-<!--<table class="table col-lg-2 offset-lg-4">-->
+      <td class="total_price"><strong>￥<%= @price.to_s(:delimited) %></strong></td>
+    </tr>
+    </thead>
+  <!--<table class="table col-lg-2 offset-lg-4">-->
 
-</table>
-<%= link_to "買い物を続ける", root_path, class: " btn btn-sm btn-primary action" %>
-<p></p>
+  </table>
+  <%= link_to "買い物を続ける", root_path, class: " btn btn-sm btn-primary action" %>
+  <p></p>
 
-<!--<div class="row my-3">-->
-<%= link_to "情報入力に進む", new_order_path, class: "btn btn-sm btn-success action" %>
-</div>
-</div>
-</main>
-<!--</div>-->
-<!--svv-->
-<!--</main>-->
+  <!--<div class="row my-3">-->
+  <%= link_to "情報入力に進む", new_order_path, class: "btn btn-sm btn-success action" %>
+  </div>
+  </div>
+  </main>
+  <!--</div>-->
+  <!--svv-->
+  <!--</main>-->
+<% else %>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <h4 class="text-center margin">カートに商品が存在しません</h4>
+      </div>
+    </div>
+  </div>
+<% end %>
