--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -19,10 +19,10 @@
       </table>
     </div>
     <div class="col-lg-9">
-      <div class="card-img-top mt-10px">
-        <%= image_tag 'top_image_2.jpeg',:size =>'830x400', class: "img" %>
+      <div class="card mt-10px">
+        <%= image_tag 'top_image_2.jpeg',:size =>'850x400', class: "img" %>
         <div class="card-img-overlay d-flex">
-          <p class="text-dark h4">
+          <p class="card-body text-dark h4">
             ようこそ、ながのケーキへ！<br>
             このサイトは、ケーキ販売のECサイトになります。<br>
             会員でない方も商品閲覧はできますが、<br>
