--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -5,7 +5,7 @@
        <%= link_to "カートを空にする", cart_item_destroy_all_path, method: :delete, class: "btn btn-sm btn-danger col-lg-2 offset-md-3" %>
     </div>
     <div class="row my-3">
-      <table class="table col-lg-8  ">
+      <table class="table col-lg-8">
         <thead class="thead-light">
           <tr>
             <th class="cart_item_th">商品名</th>
@@ -22,7 +22,14 @@
               <td class="cart_item_td"><%= attachment_image_tag cart_item.item, :image, :fill, 100, 60, format: 'jpeg', fallback: "no_image.png", class: "img" %><%= cart_item.item.name%></td>
               <td class="cart_item_td"><%= cart_item.item.add_tax_price.to_s(:delimited) %></td>
               <%= form_with model:cart_item, local:true do |f| %>
-              <td class="cart_item_td"><%= f.select :item_count, options_for_select((1..30).to_a, cart_item.item_count) %><%= f.submit "変更", class: "btn btn-sm btn-primary" %></td>
+                <td class="cart_item_td border-top border-white d-flex">
+                  <div>
+                    <%= f.text_field :item_count, value: cart_item.item_count, size: 1 %>
+                  </div>
+                  <div>
+                    <%= f.submit "変更", class: "btn btn-sm btn-primary" %>
+                  </div>
+                </td>
               <% end %>
               <td class="cart_item_td"><%= cart_item.sub_total_price.to_s(:delimited) %></td>
               <% @price += cart_item.sub_total_price %>
