--- a/app/assets/stylesheets/cart_items.scss
+++ b/app/assets/stylesheets/cart_items.scss
@@ -8,6 +8,10 @@
   width: 500px;
 }
 
+.cart_item_th:nth-child(3){
+  width: 200px;
+}
+
 .cart_item_th{
   width: 150px;
   text-align: center;
@@ -38,7 +42,7 @@
   margin: 22% 0;
 }
 
-.d-flex {
-  margin-top: 27%;
-  border-top: 0px none;
-}
+// .d-flex {
+//   margin-top: 27%;
+//   border-top: 0px none;
+// }
