--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -20,9 +20,9 @@
     </div>
     <div class="col-lg-9">
       <div class="card mt-10px">
-        <%= image_tag 'top_image_2.jpeg',:size =>'850x400', class: "img" %>
+        <%= image_tag 'top_image_2.jpeg',:size =>'820x400', class: "img" %>
         <div class="card-img-overlay d-flex">
-          <p class="card-body text-dark h4">
+          <p class="h4 color">
             ようこそ、ながのケーキへ！<br>
             このサイトは、ケーキ販売のECサイトになります。<br>
             会員でない方も商品閲覧はできますが、<br>
