--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="row my-3">
     <div class="col-lg-2 mt-5">
-      <table class="table table-borderd">
-        <thead>
+      <table class="table">
+        <thead class="thead-light">
           <tr>
             <th>ジャンル検索</th>
           </tr>
