--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -37,7 +37,7 @@
       <% end %>
     </tbody>
   </table>
-  <div class="paginate">
+  <div class="paginate mb-3">
     <%= paginate @orders %>
 </div>
 </div>
