--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -74,7 +74,7 @@
       </table>
     </div>
     <div class="col-lg-3 ">
-      <table class="admin_total">
+      <table class="admin_total mb-3">
         <tr>
           <th>商品合計</th>
           <% @payment = @order.payment - @order.delivery_charge %>
