--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -73,6 +73,8 @@
         <br>
       </div>
     </div>
-    <%= f.submit "確認画面へ進む" , class:"btn btn-primary" %>
+    <div class="mb-3">
+      <%= f.submit "確認画面へ進む" , class:"btn btn-primary" %>
+    </div>
   <% end %>
 </div>
