--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -2,7 +2,7 @@
   <div class="row my-3">
     <div class="col-lg-2 mt-5">
       <table class="table">
-        <thead class="thead-light">
+        <thead>
           <tr>
             <th>ジャンル検索</th>
           </tr>
